src/uri.rl.cc

#line 1 "/home/lighthouse/workspace/stone/src/uri.rl"
#include "uri.hpp"
#include <sstream>

namespace stone {
	
	static const int uri_parser_start = 451;
	static const int uri_parser_first_final = 451;
	static const int uri_parser_error = 0;
	
	static const int uri_parser_en_main = 451;
	
	static const char _uri_parser_nfa_targs[] = {
		0, 0
	};
	
	static const char _uri_parser_nfa_offsets[] = {
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0, 0, 0, 0, 0, 0, 0,
		0, 0
	};
	
	static const char _uri_parser_nfa_push_actions[] = {
		0, 0
	};
	
	static const char _uri_parser_nfa_pop_trans[] = {
		0, 0
	};
	
	
	#line 132 "/home/lighthouse/workspace/stone/src/uri.rl"
	
	
	Uri::ptr Uri::Create(const std::string& uristr) {
		Uri::ptr uri(new Uri);
		int cs = 0;
		const char* mark = 0;
		
		{
			cs = (int)uri_parser_start;
		}
		
		#line 139 "/home/lighthouse/workspace/stone/src/uri.rl"
		
		const char *p = uristr.c_str();
		const char *pe = p + uristr.size();
		const char* eof = pe;
		
		{
			if ( p == pe )
			goto _test_eof;
			switch ( cs )
			{
				case 451:
				goto st_case_451;
				case 452:
				goto st_case_452;
				case 0:
				goto st_case_0;
				case 453:
				goto st_case_453;
				case 454:
				goto st_case_454;
				case 1:
				goto st_case_1;
				case 2:
				goto st_case_2;
				case 3:
				goto st_case_3;
				case 4:
				goto st_case_4;
				case 455:
				goto st_case_455;
				case 5:
				goto st_case_5;
				case 6:
				goto st_case_6;
				case 456:
				goto st_case_456;
				case 457:
				goto st_case_457;
				case 7:
				goto st_case_7;
				case 8:
				goto st_case_8;
				case 458:
				goto st_case_458;
				case 459:
				goto st_case_459;
				case 9:
				goto st_case_9;
				case 10:
				goto st_case_10;
				case 11:
				goto st_case_11;
				case 12:
				goto st_case_12;
				case 13:
				goto st_case_13;
				case 14:
				goto st_case_14;
				case 15:
				goto st_case_15;
				case 16:
				goto st_case_16;
				case 17:
				goto st_case_17;
				case 18:
				goto st_case_18;
				case 19:
				goto st_case_19;
				case 20:
				goto st_case_20;
				case 21:
				goto st_case_21;
				case 22:
				goto st_case_22;
				case 460:
				goto st_case_460;
				case 461:
				goto st_case_461;
				case 462:
				goto st_case_462;
				case 463:
				goto st_case_463;
				case 464:
				goto st_case_464;
				case 465:
				goto st_case_465;
				case 466:
				goto st_case_466;
				case 23:
				goto st_case_23;
				case 24:
				goto st_case_24;
				case 25:
				goto st_case_25;
				case 26:
				goto st_case_26;
				case 27:
				goto st_case_27;
				case 28:
				goto st_case_28;
				case 29:
				goto st_case_29;
				case 30:
				goto st_case_30;
				case 467:
				goto st_case_467;
				case 31:
				goto st_case_31;
				case 32:
				goto st_case_32;
				case 468:
				goto st_case_468;
				case 33:
				goto st_case_33;
				case 34:
				goto st_case_34;
				case 35:
				goto st_case_35;
				case 469:
				goto st_case_469;
				case 470:
				goto st_case_470;
				case 36:
				goto st_case_36;
				case 37:
				goto st_case_37;
				case 471:
				goto st_case_471;
				case 472:
				goto st_case_472;
				case 473:
				goto st_case_473;
				case 474:
				goto st_case_474;
				case 475:
				goto st_case_475;
				case 476:
				goto st_case_476;
				case 477:
				goto st_case_477;
				case 478:
				goto st_case_478;
				case 479:
				goto st_case_479;
				case 480:
				goto st_case_480;
				case 481:
				goto st_case_481;
				case 482:
				goto st_case_482;
				case 483:
				goto st_case_483;
				case 484:
				goto st_case_484;
				case 485:
				goto st_case_485;
				case 486:
				goto st_case_486;
				case 487:
				goto st_case_487;
				case 488:
				goto st_case_488;
				case 38:
				goto st_case_38;
				case 39:
				goto st_case_39;
				case 40:
				goto st_case_40;
				case 41:
				goto st_case_41;
				case 42:
				goto st_case_42;
				case 43:
				goto st_case_43;
				case 44:
				goto st_case_44;
				case 45:
				goto st_case_45;
				case 46:
				goto st_case_46;
				case 47:
				goto st_case_47;
				case 48:
				goto st_case_48;
				case 49:
				goto st_case_49;
				case 50:
				goto st_case_50;
				case 51:
				goto st_case_51;
				case 52:
				goto st_case_52;
				case 53:
				goto st_case_53;
				case 54:
				goto st_case_54;
				case 55:
				goto st_case_55;
				case 56:
				goto st_case_56;
				case 57:
				goto st_case_57;
				case 58:
				goto st_case_58;
				case 59:
				goto st_case_59;
				case 60:
				goto st_case_60;
				case 61:
				goto st_case_61;
				case 62:
				goto st_case_62;
				case 63:
				goto st_case_63;
				case 64:
				goto st_case_64;
				case 65:
				goto st_case_65;
				case 66:
				goto st_case_66;
				case 67:
				goto st_case_67;
				case 68:
				goto st_case_68;
				case 69:
				goto st_case_69;
				case 70:
				goto st_case_70;
				case 71:
				goto st_case_71;
				case 72:
				goto st_case_72;
				case 73:
				goto st_case_73;
				case 74:
				goto st_case_74;
				case 75:
				goto st_case_75;
				case 76:
				goto st_case_76;
				case 77:
				goto st_case_77;
				case 78:
				goto st_case_78;
				case 79:
				goto st_case_79;
				case 80:
				goto st_case_80;
				case 81:
				goto st_case_81;
				case 82:
				goto st_case_82;
				case 83:
				goto st_case_83;
				case 84:
				goto st_case_84;
				case 85:
				goto st_case_85;
				case 86:
				goto st_case_86;
				case 87:
				goto st_case_87;
				case 88:
				goto st_case_88;
				case 89:
				goto st_case_89;
				case 90:
				goto st_case_90;
				case 91:
				goto st_case_91;
				case 92:
				goto st_case_92;
				case 93:
				goto st_case_93;
				case 94:
				goto st_case_94;
				case 95:
				goto st_case_95;
				case 96:
				goto st_case_96;
				case 97:
				goto st_case_97;
				case 98:
				goto st_case_98;
				case 99:
				goto st_case_99;
				case 100:
				goto st_case_100;
				case 101:
				goto st_case_101;
				case 102:
				goto st_case_102;
				case 103:
				goto st_case_103;
				case 104:
				goto st_case_104;
				case 105:
				goto st_case_105;
				case 106:
				goto st_case_106;
				case 107:
				goto st_case_107;
				case 108:
				goto st_case_108;
				case 109:
				goto st_case_109;
				case 110:
				goto st_case_110;
				case 111:
				goto st_case_111;
				case 112:
				goto st_case_112;
				case 113:
				goto st_case_113;
				case 114:
				goto st_case_114;
				case 115:
				goto st_case_115;
				case 116:
				goto st_case_116;
				case 117:
				goto st_case_117;
				case 118:
				goto st_case_118;
				case 119:
				goto st_case_119;
				case 120:
				goto st_case_120;
				case 121:
				goto st_case_121;
				case 122:
				goto st_case_122;
				case 123:
				goto st_case_123;
				case 124:
				goto st_case_124;
				case 125:
				goto st_case_125;
				case 126:
				goto st_case_126;
				case 127:
				goto st_case_127;
				case 128:
				goto st_case_128;
				case 129:
				goto st_case_129;
				case 130:
				goto st_case_130;
				case 131:
				goto st_case_131;
				case 132:
				goto st_case_132;
				case 133:
				goto st_case_133;
				case 134:
				goto st_case_134;
				case 135:
				goto st_case_135;
				case 136:
				goto st_case_136;
				case 137:
				goto st_case_137;
				case 138:
				goto st_case_138;
				case 139:
				goto st_case_139;
				case 140:
				goto st_case_140;
				case 141:
				goto st_case_141;
				case 142:
				goto st_case_142;
				case 143:
				goto st_case_143;
				case 144:
				goto st_case_144;
				case 145:
				goto st_case_145;
				case 146:
				goto st_case_146;
				case 147:
				goto st_case_147;
				case 148:
				goto st_case_148;
				case 149:
				goto st_case_149;
				case 150:
				goto st_case_150;
				case 151:
				goto st_case_151;
				case 152:
				goto st_case_152;
				case 153:
				goto st_case_153;
				case 154:
				goto st_case_154;
				case 155:
				goto st_case_155;
				case 156:
				goto st_case_156;
				case 157:
				goto st_case_157;
				case 158:
				goto st_case_158;
				case 159:
				goto st_case_159;
				case 160:
				goto st_case_160;
				case 161:
				goto st_case_161;
				case 162:
				goto st_case_162;
				case 163:
				goto st_case_163;
				case 164:
				goto st_case_164;
				case 165:
				goto st_case_165;
				case 166:
				goto st_case_166;
				case 167:
				goto st_case_167;
				case 168:
				goto st_case_168;
				case 169:
				goto st_case_169;
				case 170:
				goto st_case_170;
				case 171:
				goto st_case_171;
				case 172:
				goto st_case_172;
				case 173:
				goto st_case_173;
				case 174:
				goto st_case_174;
				case 175:
				goto st_case_175;
				case 176:
				goto st_case_176;
				case 177:
				goto st_case_177;
				case 178:
				goto st_case_178;
				case 179:
				goto st_case_179;
				case 180:
				goto st_case_180;
				case 181:
				goto st_case_181;
				case 182:
				goto st_case_182;
				case 183:
				goto st_case_183;
				case 184:
				goto st_case_184;
				case 185:
				goto st_case_185;
				case 186:
				goto st_case_186;
				case 187:
				goto st_case_187;
				case 188:
				goto st_case_188;
				case 189:
				goto st_case_189;
				case 190:
				goto st_case_190;
				case 191:
				goto st_case_191;
				case 192:
				goto st_case_192;
				case 193:
				goto st_case_193;
				case 194:
				goto st_case_194;
				case 195:
				goto st_case_195;
				case 196:
				goto st_case_196;
				case 197:
				goto st_case_197;
				case 198:
				goto st_case_198;
				case 199:
				goto st_case_199;
				case 200:
				goto st_case_200;
				case 201:
				goto st_case_201;
				case 202:
				goto st_case_202;
				case 203:
				goto st_case_203;
				case 204:
				goto st_case_204;
				case 205:
				goto st_case_205;
				case 206:
				goto st_case_206;
				case 207:
				goto st_case_207;
				case 208:
				goto st_case_208;
				case 209:
				goto st_case_209;
				case 210:
				goto st_case_210;
				case 211:
				goto st_case_211;
				case 212:
				goto st_case_212;
				case 213:
				goto st_case_213;
				case 214:
				goto st_case_214;
				case 215:
				goto st_case_215;
				case 216:
				goto st_case_216;
				case 217:
				goto st_case_217;
				case 218:
				goto st_case_218;
				case 219:
				goto st_case_219;
				case 220:
				goto st_case_220;
				case 221:
				goto st_case_221;
				case 222:
				goto st_case_222;
				case 223:
				goto st_case_223;
				case 224:
				goto st_case_224;
				case 225:
				goto st_case_225;
				case 226:
				goto st_case_226;
				case 227:
				goto st_case_227;
				case 228:
				goto st_case_228;
				case 489:
				goto st_case_489;
				case 490:
				goto st_case_490;
				case 491:
				goto st_case_491;
				case 492:
				goto st_case_492;
				case 493:
				goto st_case_493;
				case 494:
				goto st_case_494;
				case 495:
				goto st_case_495;
				case 496:
				goto st_case_496;
				case 497:
				goto st_case_497;
				case 498:
				goto st_case_498;
				case 499:
				goto st_case_499;
				case 500:
				goto st_case_500;
				case 501:
				goto st_case_501;
				case 502:
				goto st_case_502;
				case 503:
				goto st_case_503;
				case 504:
				goto st_case_504;
				case 505:
				goto st_case_505;
				case 506:
				goto st_case_506;
				case 507:
				goto st_case_507;
				case 508:
				goto st_case_508;
				case 509:
				goto st_case_509;
				case 510:
				goto st_case_510;
				case 511:
				goto st_case_511;
				case 229:
				goto st_case_229;
				case 230:
				goto st_case_230;
				case 231:
				goto st_case_231;
				case 232:
				goto st_case_232;
				case 233:
				goto st_case_233;
				case 234:
				goto st_case_234;
				case 235:
				goto st_case_235;
				case 236:
				goto st_case_236;
				case 237:
				goto st_case_237;
				case 238:
				goto st_case_238;
				case 239:
				goto st_case_239;
				case 240:
				goto st_case_240;
				case 241:
				goto st_case_241;
				case 242:
				goto st_case_242;
				case 512:
				goto st_case_512;
				case 513:
				goto st_case_513;
				case 243:
				goto st_case_243;
				case 244:
				goto st_case_244;
				case 514:
				goto st_case_514;
				case 515:
				goto st_case_515;
				case 516:
				goto st_case_516;
				case 517:
				goto st_case_517;
				case 518:
				goto st_case_518;
				case 519:
				goto st_case_519;
				case 245:
				goto st_case_245;
				case 246:
				goto st_case_246;
				case 247:
				goto st_case_247;
				case 248:
				goto st_case_248;
				case 249:
				goto st_case_249;
				case 250:
				goto st_case_250;
				case 251:
				goto st_case_251;
				case 252:
				goto st_case_252;
				case 520:
				goto st_case_520;
				case 253:
				goto st_case_253;
				case 254:
				goto st_case_254;
				case 521:
				goto st_case_521;
				case 255:
				goto st_case_255;
				case 256:
				goto st_case_256;
				case 257:
				goto st_case_257;
				case 522:
				goto st_case_522;
				case 523:
				goto st_case_523;
				case 258:
				goto st_case_258;
				case 259:
				goto st_case_259;
				case 524:
				goto st_case_524;
				case 525:
				goto st_case_525;
				case 526:
				goto st_case_526;
				case 527:
				goto st_case_527;
				case 528:
				goto st_case_528;
				case 529:
				goto st_case_529;
				case 530:
				goto st_case_530;
				case 531:
				goto st_case_531;
				case 532:
				goto st_case_532;
				case 533:
				goto st_case_533;
				case 534:
				goto st_case_534;
				case 535:
				goto st_case_535;
				case 536:
				goto st_case_536;
				case 537:
				goto st_case_537;
				case 538:
				goto st_case_538;
				case 539:
				goto st_case_539;
				case 540:
				goto st_case_540;
				case 541:
				goto st_case_541;
				case 260:
				goto st_case_260;
				case 261:
				goto st_case_261;
				case 262:
				goto st_case_262;
				case 263:
				goto st_case_263;
				case 264:
				goto st_case_264;
				case 265:
				goto st_case_265;
				case 266:
				goto st_case_266;
				case 267:
				goto st_case_267;
				case 268:
				goto st_case_268;
				case 269:
				goto st_case_269;
				case 270:
				goto st_case_270;
				case 271:
				goto st_case_271;
				case 272:
				goto st_case_272;
				case 273:
				goto st_case_273;
				case 274:
				goto st_case_274;
				case 275:
				goto st_case_275;
				case 276:
				goto st_case_276;
				case 277:
				goto st_case_277;
				case 278:
				goto st_case_278;
				case 279:
				goto st_case_279;
				case 280:
				goto st_case_280;
				case 281:
				goto st_case_281;
				case 282:
				goto st_case_282;
				case 283:
				goto st_case_283;
				case 284:
				goto st_case_284;
				case 285:
				goto st_case_285;
				case 286:
				goto st_case_286;
				case 287:
				goto st_case_287;
				case 288:
				goto st_case_288;
				case 289:
				goto st_case_289;
				case 290:
				goto st_case_290;
				case 291:
				goto st_case_291;
				case 292:
				goto st_case_292;
				case 293:
				goto st_case_293;
				case 294:
				goto st_case_294;
				case 295:
				goto st_case_295;
				case 296:
				goto st_case_296;
				case 297:
				goto st_case_297;
				case 298:
				goto st_case_298;
				case 299:
				goto st_case_299;
				case 300:
				goto st_case_300;
				case 301:
				goto st_case_301;
				case 302:
				goto st_case_302;
				case 303:
				goto st_case_303;
				case 304:
				goto st_case_304;
				case 305:
				goto st_case_305;
				case 306:
				goto st_case_306;
				case 307:
				goto st_case_307;
				case 308:
				goto st_case_308;
				case 309:
				goto st_case_309;
				case 310:
				goto st_case_310;
				case 311:
				goto st_case_311;
				case 312:
				goto st_case_312;
				case 313:
				goto st_case_313;
				case 314:
				goto st_case_314;
				case 315:
				goto st_case_315;
				case 316:
				goto st_case_316;
				case 317:
				goto st_case_317;
				case 318:
				goto st_case_318;
				case 319:
				goto st_case_319;
				case 320:
				goto st_case_320;
				case 321:
				goto st_case_321;
				case 322:
				goto st_case_322;
				case 323:
				goto st_case_323;
				case 324:
				goto st_case_324;
				case 325:
				goto st_case_325;
				case 326:
				goto st_case_326;
				case 327:
				goto st_case_327;
				case 328:
				goto st_case_328;
				case 329:
				goto st_case_329;
				case 330:
				goto st_case_330;
				case 331:
				goto st_case_331;
				case 332:
				goto st_case_332;
				case 333:
				goto st_case_333;
				case 334:
				goto st_case_334;
				case 335:
				goto st_case_335;
				case 336:
				goto st_case_336;
				case 337:
				goto st_case_337;
				case 338:
				goto st_case_338;
				case 339:
				goto st_case_339;
				case 340:
				goto st_case_340;
				case 341:
				goto st_case_341;
				case 342:
				goto st_case_342;
				case 343:
				goto st_case_343;
				case 344:
				goto st_case_344;
				case 345:
				goto st_case_345;
				case 346:
				goto st_case_346;
				case 347:
				goto st_case_347;
				case 348:
				goto st_case_348;
				case 349:
				goto st_case_349;
				case 350:
				goto st_case_350;
				case 351:
				goto st_case_351;
				case 352:
				goto st_case_352;
				case 353:
				goto st_case_353;
				case 354:
				goto st_case_354;
				case 355:
				goto st_case_355;
				case 356:
				goto st_case_356;
				case 357:
				goto st_case_357;
				case 358:
				goto st_case_358;
				case 359:
				goto st_case_359;
				case 360:
				goto st_case_360;
				case 361:
				goto st_case_361;
				case 362:
				goto st_case_362;
				case 363:
				goto st_case_363;
				case 364:
				goto st_case_364;
				case 365:
				goto st_case_365;
				case 366:
				goto st_case_366;
				case 367:
				goto st_case_367;
				case 368:
				goto st_case_368;
				case 369:
				goto st_case_369;
				case 370:
				goto st_case_370;
				case 371:
				goto st_case_371;
				case 372:
				goto st_case_372;
				case 373:
				goto st_case_373;
				case 374:
				goto st_case_374;
				case 375:
				goto st_case_375;
				case 376:
				goto st_case_376;
				case 377:
				goto st_case_377;
				case 378:
				goto st_case_378;
				case 379:
				goto st_case_379;
				case 380:
				goto st_case_380;
				case 381:
				goto st_case_381;
				case 382:
				goto st_case_382;
				case 383:
				goto st_case_383;
				case 384:
				goto st_case_384;
				case 385:
				goto st_case_385;
				case 386:
				goto st_case_386;
				case 387:
				goto st_case_387;
				case 388:
				goto st_case_388;
				case 389:
				goto st_case_389;
				case 390:
				goto st_case_390;
				case 391:
				goto st_case_391;
				case 392:
				goto st_case_392;
				case 393:
				goto st_case_393;
				case 394:
				goto st_case_394;
				case 395:
				goto st_case_395;
				case 396:
				goto st_case_396;
				case 397:
				goto st_case_397;
				case 398:
				goto st_case_398;
				case 399:
				goto st_case_399;
				case 400:
				goto st_case_400;
				case 401:
				goto st_case_401;
				case 402:
				goto st_case_402;
				case 403:
				goto st_case_403;
				case 404:
				goto st_case_404;
				case 405:
				goto st_case_405;
				case 406:
				goto st_case_406;
				case 407:
				goto st_case_407;
				case 408:
				goto st_case_408;
				case 409:
				goto st_case_409;
				case 410:
				goto st_case_410;
				case 411:
				goto st_case_411;
				case 412:
				goto st_case_412;
				case 413:
				goto st_case_413;
				case 414:
				goto st_case_414;
				case 415:
				goto st_case_415;
				case 416:
				goto st_case_416;
				case 417:
				goto st_case_417;
				case 418:
				goto st_case_418;
				case 419:
				goto st_case_419;
				case 420:
				goto st_case_420;
				case 421:
				goto st_case_421;
				case 422:
				goto st_case_422;
				case 423:
				goto st_case_423;
				case 424:
				goto st_case_424;
				case 425:
				goto st_case_425;
				case 426:
				goto st_case_426;
				case 427:
				goto st_case_427;
				case 428:
				goto st_case_428;
				case 429:
				goto st_case_429;
				case 430:
				goto st_case_430;
				case 431:
				goto st_case_431;
				case 432:
				goto st_case_432;
				case 433:
				goto st_case_433;
				case 434:
				goto st_case_434;
				case 435:
				goto st_case_435;
				case 436:
				goto st_case_436;
				case 437:
				goto st_case_437;
				case 438:
				goto st_case_438;
				case 439:
				goto st_case_439;
				case 440:
				goto st_case_440;
				case 441:
				goto st_case_441;
				case 442:
				goto st_case_442;
				case 443:
				goto st_case_443;
				case 444:
				goto st_case_444;
				case 445:
				goto st_case_445;
				case 446:
				goto st_case_446;
				case 447:
				goto st_case_447;
				case 448:
				goto st_case_448;
				case 449:
				goto st_case_449;
				case 450:
				goto st_case_450;
				case 542:
				goto st_case_542;
				case 543:
				goto st_case_543;
				case 544:
				goto st_case_544;
				case 545:
				goto st_case_545;
				case 546:
				goto st_case_546;
				case 547:
				goto st_case_547;
				case 548:
				goto st_case_548;
				case 549:
				goto st_case_549;
				case 550:
				goto st_case_550;
				case 551:
				goto st_case_551;
				case 552:
				goto st_case_552;
				case 553:
				goto st_case_553;
				case 554:
				goto st_case_554;
				case 555:
				goto st_case_555;
				case 556:
				goto st_case_556;
				case 557:
				goto st_case_557;
				case 558:
				goto st_case_558;
				case 559:
				goto st_case_559;
				case 560:
				goto st_case_560;
			}
			goto st_out;
			st_case_451:
			switch( ( (*( p))) ) {
				case 34: {
					goto st0;
				}
				case 35: {
					goto st453;
				}
				case 37: {
					goto st3;
				}
				case 47: {
					goto st458;
				}
				case 58: {
					goto st0;
				}
				case 60: {
					goto st0;
				}
				case 62: {
					goto st0;
				}
				case 63: {
					goto st456;
				}
				case 96: {
					goto st0;
				}
				case 127: {
					goto st0;
				}
			}
			if ( ( (*( p))) < 91 ) {
				if ( ( (*( p))) > 32 ) {
					if ( 65 <= ( (*( p))) ) {
